tests/error/error14.sml
val prog =
  PROGRAM
    {classes=[{decls=[],funcs=[],name="A",super=NONE},
              {decls=[],funcs=[],name="A",super=NONE}],decls=[],funcs=[],
     stmts=[ST_EXP {exp=EXP_NEW {class="A"}}]} : program
;
